syntax = "proto3";

package user;

message RegisterUserResponse {
  string user_id = 1;
  bool success = 2;
  string message = 3;
}

message UpdateUserResponse {
  string user_id = 1;
  bool success = 2;
  string message = 3;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}